feat(apps/server): fix formatting issues
